--- a/zajecia_2/zadanie_2/style.css
+++ b/zajecia_2/zadanie_2/style.css
@@ -144,7 +144,7 @@ main form{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 50%;
+    height:40%;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -161,7 +161,7 @@ main form{
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-evenly;
-    height: 85%;
+    height: 100%;
     width: 100%;
 }
 #childBed{
@@ -169,7 +169,7 @@ main form{
     flex-direction: column;
     align-items: center;
     width: 30%;
-    height: 30%;
+    height: 50%;
     justify-content: flex-start;
     border: 1px black solid;
     border-radius: 10px;
@@ -196,7 +196,7 @@ main form{
     flex-direction: column;
     align-items: center;
     width: 30%;
-    height: 50%;
+    height: 100%;
     justify-content: flex-start;
     border: 1px black solid;
     border-radius: 10px;
@@ -210,6 +210,12 @@ main form{
 #otherUdogodnieniaList{
     display: flex;
     flex-direction: column;
+}
+#buttonSection{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10%;
 }
 footer{
     width: 100%;
